--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -9,6 +9,7 @@
 @           1H  IN NS   ns2
 ns0         1H  IN A    208.80.154.238
 ns1         1H  IN A    208.80.153.231
+ns1         1H  IN AAAA 2620:0:860:53::1
 ns2         1H  IN A    198.35.27.27 ; anycasted authdns
 
 ; Mail exchangers
