--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -874,6 +874,7 @@ ticket           1D IN CNAME dyna.wikimedia.org.
 mirrors          5M IN CNAME mirror1001
 yarn             1D IN CNAME dyna.wikimedia.org.
 turnilo          1D IN CNAME dyna.wikimedia.org.
+turnilo-next     1D IN CNAME dyna.wikimedia.org.
 schema           1D IN CNAME dyna.wikimedia.org.
 thanos           1D IN CNAME dyna.wikimedia.org.
 trace            1D IN CNAME dyna.wikimedia.org.
