Switch frack bastion to codfw so we can do maintenance on the eqiad server.
Change-Id: I20d3c1ea4b45a66afc82c2166cb45cd6ec026dd7

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -276,7 +276,7 @@ civicrm.frdev               1H  IN CNAME    frdev-eqiad
 donorpreferences            1H  IN CNAME    frdata-eqiad
 fundraising                 1H  IN CNAME    frdata-eqiad
 fundraising.frdev           1H  IN CNAME    frdata-eqiad
-frbast                      1H  IN CNAME    frbast-eqiad
+frbast                      1H  IN CNAME    frbast-codfw
 frdata                      1H  IN CNAME    frdata-eqiad
 frmon                       1H  IN CNAME    frmon-eqiad
 frmon.frdev                 1H  IN CNAME    frmon-eqiad
