--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -282,7 +282,7 @@ civicrm.frdev               1H  IN CNAME    frdev-eqiad
 donorpreferences            1H  IN CNAME    frdata-eqiad
 fundraising                 1H  IN CNAME    frdata-eqiad
 fundraising.frdev           1H  IN CNAME    frdata-eqiad
-frbast                      1H  IN CNAME    frbast-codfw
+frbast                      1H  IN CNAME    frbast-eqiad
 frdata                      1H  IN CNAME    frdata-eqiad
 frmon                       1H  IN CNAME    frmon-eqiad
 frmon.frdev                 1H  IN CNAME    frmon-eqiad
