wikimedia.org: add IPv6 glue records for ns0 and ns2
Add the IPv6 glue records for ns0.wikimedia.org and ns2.wikimedia.org.
We will turn follow up with a change on Markmonitor's end.

Bug: T81605
Change-Id: Iceabedd71dfa900bb48a5c3815b3f3f3bcc43e08

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -8,9 +8,11 @@
 @           1H  IN NS   ns1
 @           1H  IN NS   ns2
 ns0         1H  IN A    208.80.154.238
+ns0         1H  IN AAAA 2620:0:861:53::1
 ns1         1H  IN A    208.80.153.231
 ns1         1H  IN AAAA 2620:0:860:53::1
-ns2         1H  IN A    198.35.27.27 ; anycasted authdns
+ns2         1H  IN A    198.35.27.27
+ns2         1H  IN AAAA 2a02:ec80:53::1
 
 ; Mail exchangers
 
