dmarc: remove unused ruf tags
We do not currently have a mail alias setup to receive these reports,
most email service providers do not send these reports, and there are
privacy concerns with storing these reports.

This tag is optional, so removing it should not cause issues.

Bug: T417941
Change-Id: I9efccecd7c07fe2a2e9b1ff9ba07e39790444849

--- a/templates/wikidata.org
+++ b/templates/wikidata.org
@@ -26,7 +26,7 @@
 @           600     IN TXT  "v=spf1 include:wikimedia.org ~all"
 
 ; DMARC record
-_dmarc      600     IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc      600     IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
