--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -101,7 +101,7 @@ k2._domainkey       1H IN CNAME dkim2.mcsv.net.
 k3._domainkey       1H IN CNAME dkim3.mcsv.net.
 
 ; DMARC record
-_dmarc          600  IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc          600  IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; DMARC external domain verification for other WMF domains delivering to @wikimedia.org
 mediawiki.org._report._dmarc            1H  IN TXT "v=DMARC1;"
@@ -205,7 +205,7 @@ lists           5M  IN AAAA 2620:0:861:3:208:80:154:81
 lists           1H  IN MX   10 lists
 lists           1H  IN TXT  "v=spf1 mx ~all"
 ; DMARC record, keep none policy for now, as more work is required, https://phabricator.wikimedia.org/T379517
-_dmarc.lists    1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc.lists    1H  IN TXT "v=DMARC1; p=none; rua=mailto:dmarc-rua@wikimedia.org;"
 _domainkey.lists        1H  IN TXT  "o=~; r=postmaster@wikimedia.org;"
 _adsp._domainkey.lists  1H  IN TXT  "dkim=unknown;"
 wikimedia._domainkey.lists  1H  IN TXT  "v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7iVvYIGUbjtvFcLTUuN9Lsc1w17f8QHc01BxIr6jHJUMAMyxHSchdU6Il/hX1Or3JyOfdBi35SGqotI3G86xxQE7PZD7u+EediP5uhRTn+opv+nX5hEuxlnty8mPXem0DHhfSL0+3Ciu5WD0mNATb4NwC9jQjy2FzaLHn9D44PwIDAQAB"
@@ -229,7 +229,7 @@ donate          300 IN MX       10 mx-in2001
 donate          5M  IN TXT  "v=spf1 ip4:185.15.59.0/24 ip4:208.80.152.0/22 ip6:2620:0:860::/46 include:_spf.google.com ip4:74.121.51.111 ~all"
 ; Google site verification for https://postmaster.google.com
 donate          300 IN TXT  "google-site-verification=JjhlduqLloGdWYGuMopl6ZyeNHh5Exph9dISsMGSo90"
-_dmarc.donate   600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc.donate   600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
 
