--- a/templates/wmfusercontent.org
+++ b/templates/wmfusercontent.org
@@ -16,7 +16,7 @@
 @           600 IN TXT  "v=spf1 -all"
 
 ; DMARC record
-_dmarc      600 IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org; ruf=mailto:dmarc-ruf@wikimedia.org;"
+_dmarc      600 IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; Canonical names
 @           180 IN DYNA geoip!text-addrs
