dmarc: add dmarc records for domains which do not send email
Add or cleanup dmarc records for domains we do not expect to
send mail from:

 - w.wiki
 - wikimedia-dns.org
 - wikimedia-ech.org
 - wikiworkshop.org
 - wmftest.org
 - wmfusercontent.org

Change-Id: I484c8d54c4bcd02e84426d1473641f5cd388e54b

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -123,6 +123,10 @@ wikiversity.org._report._dmarc          1H  IN TXT "v=DMARC1;"
 wikivoyage.org._report._dmarc           1H  IN TXT "v=DMARC1;"
 wiktionary.org._report._dmarc           1H  IN TXT "v=DMARC1;"
 wmfusercontent.org._report._dmarc       1H  IN TXT "v=DMARC1;"
+wikimedia-dns.org._report._dmarc        1H  IN TXT "v=DMARC1;"
+wikimedia-ech.org._report._dmarc        1H  IN TXT "v=DMARC1;"
+wikiworkshop.org._report._dmarc         1H  IN TXT "v=DMARC1;"
+wmftest.org._report._dmarc              1H  IN TXT "v=DMARC1;"
 
 ; Mail records for pr.wikimedia.org
 pr   300 IN MX 10 mx-in1001
