--- a/templates/w.wiki
+++ b/templates/w.wiki
@@ -19,11 +19,9 @@
 ; Google Webmaster Tools verification record for search management
 @           600 IN TXT  "google-site-verification=AMHkgs-4ViEvIJf5znZle-BSE2EPNFqM1nDJGRyn2qk"
 
-; SPF txt and rr records
+; Email should not be sent from this domain
 @           600 IN TXT  "v=spf1 -all"
-
-; DMARC record
-_dmarc      600 IN TXT "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
+_dmarc      600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; CAA records
 @           600 IN CAA 0 issue "digicert.com"
