--- a/templates/wikimedia-dns.org
+++ b/templates/wikimedia-dns.org
@@ -15,8 +15,9 @@
 
 ; Canonical names
 
-; SPF records
-@           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
+; Email should not be sent from this domain
+@           600 IN TXT  "v=spf1 -all"
+_dmarc      600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; CAA records
 @           600 IN CAA 0 issue "letsencrypt.org"
