--- a/templates/wikimedia-ech.org
+++ b/templates/wikimedia-ech.org
@@ -13,8 +13,9 @@
 @           300 IN MX   10  mx-in1001.wikimedia.org.
 @           300 IN MX   10  mx-in2001.wikimedia.org.
 
-; SPF records
-@           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
+; Email should not be sent from this domain
+@           600 IN TXT  "v=spf1 -all"
+_dmarc      600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; CAA records
 @           600 IN CAA 0 issue "letsencrypt.org"
