--- a/templates/wikiworkshop.org
+++ b/templates/wikiworkshop.org
@@ -14,3 +14,7 @@
 
 @           180 IN DYNA geoip!text-addrs
 www         180 IN DYNA geoip!text-addrs
+
+; Email should not be sent from this domain
+@           600 IN TXT  "v=spf1 -all"
+_dmarc      600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
