--- a/templates/wmftest.org
+++ b/templates/wmftest.org
@@ -16,8 +16,9 @@
 @           1H  IN MX   40      ASPMX2.GOOGLEMAIL.COM.
 @           1H  IN MX   50      ASPMX3.GOOGLEMAIL.COM.
 
-; SPF records
-@           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
+; Email should not be sent from this domain
+@           600 IN TXT  "v=spf1 -all"
+_dmarc      600 IN TXT  "v=DMARC1; p=reject; rua=mailto:dmarc-rua@wikimedia.org;"
 
 ; Canonical names
 
